# v_swim_ingester

./: .gitignore  Cargo.toml  Dockerfile  buildspec.yml
api_data/: vatsim-data.json
src/: database.rs  main.rs
src/vatsim/: errors.rs  mod.rs  vatsim_api_data.rs  vatsim_data_model.rs
