[package]
name = "v_swim_ingester"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "2.4.0"
#aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-config" }
#aws-sdk-dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.19-alpha", package = "aws-sdk-dynamodb" }
tokio = { version = "1", features = ["full"] }
rusoto_dynamodb = "0.47.0"
rusoto_core = "0.47.0"
reqwest = "0.11.4"
rand = "0.8.4"